# resonate

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
backend/: main.py
docker/: init.sql
drizzle/: 0000_odd_winter_soldier.sql  0001_dear_serpent_society.sql  0002_thin_paibok.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
frontend/: .env.example  package-lock.json  package.json
frontend/src/: app.html
frontend/src/lib/: stores.ts  types.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
lightgcn/: __init__.py
model/: README.md  pyproject.toml
model/notebooks/: collaborative_filtering.ipynb  explore_data.ipynb  rec_dataset.ipynb
model/scripts/: export_mappings.py  seed_db.py  seed_user_profiles.py  show_sample_data.py
notebooks/: collaborative_filtering.ipynb  lightgcn_train.ipynb  rec_dataset.ipynb  resonate_train.ipynb
scripts/: export_mappings.py  seed_db.py  seed_user_profiles.py
src/: app.css  app.d.ts
src/lib/: artist-image-url.ts  auth-client.ts  format-artist-name.ts  stores.ts  types.ts
src/lib/api/: likes.ts  recommendations.ts  wikipedia.ts
src/lib/client/: impersonate.ts
src/lib/components/: ArtistCard.svelte  ArtistImage.svelte  Navbar.svelte  OnboardingFlow.svelte  Sidebar.svelte  Skeleton.svelte  Toast.svelte  UserAvatar.svelte
src/lib/data/: artists.ts  recommendations.ts  (+1 more)
src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
(+58 files in other folders)
