[project]
name = "lightgcn"
version = "0.1.0"
description = "LightGCN with Last.fm 360K dataset"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lightgcn"]
