[project]
name = "resonate"
version = "0.1.0"
description = "Resonate — music recommendations with Last.fm 360K"
requires-python = ">=3.10"
dependencies = [
    "rich>=14.3.3",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "jupyter>=1.0",
    "torch>=2.0",
    "scipy>=1.11",
    "tqdm>=4.65",
    "psycopg2-binary>=2.9",
    "faker>=30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resonate"]
